parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> all
Rule 1     all -> create
Rule 2     all -> use
Rule 3     all -> load
Rule 4     all -> drop
Rule 5     all -> select
Rule 6     all -> cdb
Rule 7     all -> schema
Rule 8     all -> dblist
Rule 9     all -> exit
Rule 10    create -> CREATE DATABASE ID SEMI
Rule 11    dblist -> LIST DATABASE SEMI
Rule 12    cdb -> CURRENT DATABASE SEMI
Rule 13    schema -> SCHEMA DATABASE ID SEMI
Rule 14    schema -> SCHEMA CURRENT DATABASE SEMI
Rule 15    schema -> SCHEMA TABLE ID SEMI
Rule 16    use -> USE ID SEMI
Rule 17    load -> LOAD ID AS ID LPAREN column_dtypes RPAREN SEMI
Rule 18    column_dtypes -> column_dtypes COMMA column_dtype
Rule 19    column_dtypes -> column_dtype
Rule 20    column_dtype -> ID COLON dtype
Rule 21    dtype -> INT
Rule 22    dtype -> FLOAT
Rule 23    dtype -> STR
Rule 24    drop -> DROP DATABASE ID SEMI
Rule 25    drop -> DROP TABLE ID SEMI
Rule 26    select -> SELECT columns FROM ID WHERE logical_not_expression SEMI
Rule 27    columns -> columns COMMA column
Rule 28    columns -> column
Rule 29    column -> MAX LPAREN ID RPAREN
Rule 30    column -> COUNT LPAREN ID RPAREN
Rule 31    column -> SUM LPAREN ID RPAREN
Rule 32    column -> ID
Rule 33    column -> MAX LPAREN ID RPAREN AS ID
Rule 34    column -> COUNT LPAREN ID RPAREN AS ID
Rule 35    column -> SUM LPAREN ID RPAREN AS ID
Rule 36    column -> ID AS ID
Rule 37    logical_not_expression -> logical_or_expression
Rule 38    logical_not_expression -> NOT logical_not_expression
Rule 39    logical_or_expression -> logical_and_expression
Rule 40    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 41    logical_and_expression -> equality_expression
Rule 42    logical_and_expression -> logical_and_expression AND equality_expression
Rule 43    equality_expression -> relational_expression
Rule 44    equality_expression -> equality_expression EQ relational_expression
Rule 45    equality_expression -> equality_expression EQUALS relational_expression
Rule 46    equality_expression -> equality_expression NE relational_expression
Rule 47    relational_expression -> additive_expression
Rule 48    relational_expression -> relational_expression LT additive_expression
Rule 49    relational_expression -> relational_expression GT additive_expression
Rule 50    relational_expression -> relational_expression LE additive_expression
Rule 51    relational_expression -> relational_expression GE additive_expression
Rule 52    additive_expression -> multiplicative_expression
Rule 53    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 54    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 55    multiplicative_expression -> val
Rule 56    multiplicative_expression -> multiplicative_expression TIMES val
Rule 57    multiplicative_expression -> multiplicative_expression DIVIDE val
Rule 58    multiplicative_expression -> multiplicative_expression MOD val
Rule 59    val -> ID
Rule 60    val -> ICONST
Rule 61    val -> FCONST
Rule 62    val -> SCONST
Rule 63    exit -> EXIT LPAREN RPAREN
Rule 64    exit -> QUIT LPAREN RPAREN
Rule 65    exit -> EXIT LPAREN RPAREN SEMI
Rule 66    exit -> QUIT LPAREN RPAREN SEMI

Terminals, with rules where they appear

AND                  : 42
AS                   : 17 33 34 35 36
COLON                : 20
COMMA                : 18 27
COUNT                : 30 34
CREATE               : 10
CURRENT              : 12 14
DATABASE             : 10 11 12 13 14 24
DIVIDE               : 57
DROP                 : 24 25
EQ                   : 44
EQUALS               : 45
EXIT                 : 63 65
FCONST               : 61
FLOAT                : 22
FROM                 : 26
GE                   : 51
GT                   : 49
ICONST               : 60
ID                   : 10 13 15 16 17 17 20 24 25 26 29 30 31 32 33 33 34 34 35 35 36 36 59
INT                  : 21
LE                   : 50
LIST                 : 11
LOAD                 : 17
LPAREN               : 17 29 30 31 33 34 35 63 64 65 66
LT                   : 48
MAX                  : 29 33
MINUS                : 54
MOD                  : 58
NE                   : 46
NOT                  : 38
OR                   : 40
PLUS                 : 53
QUIT                 : 64 66
RPAREN               : 17 29 30 31 33 34 35 63 64 65 66
SCHEMA               : 13 14 15
SCONST               : 62
SELECT               : 26
SEMI                 : 10 11 12 13 14 15 16 17 24 25 26 65 66
STR                  : 23
SUM                  : 31 35
TABLE                : 15 25
TIMES                : 56
USE                  : 16
WHERE                : 26
error                : 

Nonterminals, with rules where they appear

additive_expression  : 47 48 49 50 51 53 54
all                  : 0
cdb                  : 6
column               : 27 28
column_dtype         : 18 19
column_dtypes        : 17 18
columns              : 26 27
create               : 1
dblist               : 8
drop                 : 4
dtype                : 20
equality_expression  : 41 42 44 45 46
exit                 : 9
load                 : 3
logical_and_expression : 39 40 42
logical_not_expression : 26 38
logical_or_expression : 37 40
multiplicative_expression : 52 53 54 56 57 58
relational_expression : 43 44 45 46 48 49 50 51
schema               : 7
select               : 5
use                  : 2
val                  : 55 56 57 58

Parsing method: LALR

state 0

    (0) S' -> . all
    (1) all -> . create
    (2) all -> . use
    (3) all -> . load
    (4) all -> . drop
    (5) all -> . select
    (6) all -> . cdb
    (7) all -> . schema
    (8) all -> . dblist
    (9) all -> . exit
    (10) create -> . CREATE DATABASE ID SEMI
    (16) use -> . USE ID SEMI
    (17) load -> . LOAD ID AS ID LPAREN column_dtypes RPAREN SEMI
    (24) drop -> . DROP DATABASE ID SEMI
    (25) drop -> . DROP TABLE ID SEMI
    (26) select -> . SELECT columns FROM ID WHERE logical_not_expression SEMI
    (12) cdb -> . CURRENT DATABASE SEMI
    (13) schema -> . SCHEMA DATABASE ID SEMI
    (14) schema -> . SCHEMA CURRENT DATABASE SEMI
    (15) schema -> . SCHEMA TABLE ID SEMI
    (11) dblist -> . LIST DATABASE SEMI
    (63) exit -> . EXIT LPAREN RPAREN
    (64) exit -> . QUIT LPAREN RPAREN
    (65) exit -> . EXIT LPAREN RPAREN SEMI
    (66) exit -> . QUIT LPAREN RPAREN SEMI

    CREATE          shift and go to state 11
    USE             shift and go to state 12
    LOAD            shift and go to state 13
    DROP            shift and go to state 14
    SELECT          shift and go to state 15
    CURRENT         shift and go to state 16
    SCHEMA          shift and go to state 17
    LIST            shift and go to state 18
    EXIT            shift and go to state 19
    QUIT            shift and go to state 20

    all                            shift and go to state 1
    create                         shift and go to state 2
    use                            shift and go to state 3
    load                           shift and go to state 4
    drop                           shift and go to state 5
    select                         shift and go to state 6
    cdb                            shift and go to state 7
    schema                         shift and go to state 8
    dblist                         shift and go to state 9
    exit                           shift and go to state 10

state 1

    (0) S' -> all .



state 2

    (1) all -> create .

    $end            reduce using rule 1 (all -> create .)


state 3

    (2) all -> use .

    $end            reduce using rule 2 (all -> use .)


state 4

    (3) all -> load .

    $end            reduce using rule 3 (all -> load .)


state 5

    (4) all -> drop .

    $end            reduce using rule 4 (all -> drop .)


state 6

    (5) all -> select .

    $end            reduce using rule 5 (all -> select .)


state 7

    (6) all -> cdb .

    $end            reduce using rule 6 (all -> cdb .)


state 8

    (7) all -> schema .

    $end            reduce using rule 7 (all -> schema .)


state 9

    (8) all -> dblist .

    $end            reduce using rule 8 (all -> dblist .)


state 10

    (9) all -> exit .

    $end            reduce using rule 9 (all -> exit .)


state 11

    (10) create -> CREATE . DATABASE ID SEMI

    DATABASE        shift and go to state 21


state 12

    (16) use -> USE . ID SEMI

    ID              shift and go to state 22


state 13

    (17) load -> LOAD . ID AS ID LPAREN column_dtypes RPAREN SEMI

    ID              shift and go to state 23


state 14

    (24) drop -> DROP . DATABASE ID SEMI
    (25) drop -> DROP . TABLE ID SEMI

    DATABASE        shift and go to state 24
    TABLE           shift and go to state 25


state 15

    (26) select -> SELECT . columns FROM ID WHERE logical_not_expression SEMI
    (27) columns -> . columns COMMA column
    (28) columns -> . column
    (29) column -> . MAX LPAREN ID RPAREN
    (30) column -> . COUNT LPAREN ID RPAREN
    (31) column -> . SUM LPAREN ID RPAREN
    (32) column -> . ID
    (33) column -> . MAX LPAREN ID RPAREN AS ID
    (34) column -> . COUNT LPAREN ID RPAREN AS ID
    (35) column -> . SUM LPAREN ID RPAREN AS ID
    (36) column -> . ID AS ID

    MAX             shift and go to state 29
    COUNT           shift and go to state 30
    SUM             shift and go to state 31
    ID              shift and go to state 27

    columns                        shift and go to state 26
    column                         shift and go to state 28

state 16

    (12) cdb -> CURRENT . DATABASE SEMI

    DATABASE        shift and go to state 32


state 17

    (13) schema -> SCHEMA . DATABASE ID SEMI
    (14) schema -> SCHEMA . CURRENT DATABASE SEMI
    (15) schema -> SCHEMA . TABLE ID SEMI

    DATABASE        shift and go to state 33
    CURRENT         shift and go to state 34
    TABLE           shift and go to state 35


state 18

    (11) dblist -> LIST . DATABASE SEMI

    DATABASE        shift and go to state 36


state 19

    (63) exit -> EXIT . LPAREN RPAREN
    (65) exit -> EXIT . LPAREN RPAREN SEMI

    LPAREN          shift and go to state 37


state 20

    (64) exit -> QUIT . LPAREN RPAREN
    (66) exit -> QUIT . LPAREN RPAREN SEMI

    LPAREN          shift and go to state 38


state 21

    (10) create -> CREATE DATABASE . ID SEMI

    ID              shift and go to state 39


state 22

    (16) use -> USE ID . SEMI

    SEMI            shift and go to state 40


state 23

    (17) load -> LOAD ID . AS ID LPAREN column_dtypes RPAREN SEMI

    AS              shift and go to state 41


state 24

    (24) drop -> DROP DATABASE . ID SEMI

    ID              shift and go to state 42


state 25

    (25) drop -> DROP TABLE . ID SEMI

    ID              shift and go to state 43


state 26

    (26) select -> SELECT columns . FROM ID WHERE logical_not_expression SEMI
    (27) columns -> columns . COMMA column

    FROM            shift and go to state 44
    COMMA           shift and go to state 45


state 27

    (32) column -> ID .
    (36) column -> ID . AS ID

    FROM            reduce using rule 32 (column -> ID .)
    COMMA           reduce using rule 32 (column -> ID .)
    AS              shift and go to state 46


state 28

    (28) columns -> column .

    FROM            reduce using rule 28 (columns -> column .)
    COMMA           reduce using rule 28 (columns -> column .)


state 29

    (29) column -> MAX . LPAREN ID RPAREN
    (33) column -> MAX . LPAREN ID RPAREN AS ID

    LPAREN          shift and go to state 47


state 30

    (30) column -> COUNT . LPAREN ID RPAREN
    (34) column -> COUNT . LPAREN ID RPAREN AS ID

    LPAREN          shift and go to state 48


state 31

    (31) column -> SUM . LPAREN ID RPAREN
    (35) column -> SUM . LPAREN ID RPAREN AS ID

    LPAREN          shift and go to state 49


state 32

    (12) cdb -> CURRENT DATABASE . SEMI

    SEMI            shift and go to state 50


state 33

    (13) schema -> SCHEMA DATABASE . ID SEMI

    ID              shift and go to state 51


state 34

    (14) schema -> SCHEMA CURRENT . DATABASE SEMI

    DATABASE        shift and go to state 52


state 35

    (15) schema -> SCHEMA TABLE . ID SEMI

    ID              shift and go to state 53


state 36

    (11) dblist -> LIST DATABASE . SEMI

    SEMI            shift and go to state 54


state 37

    (63) exit -> EXIT LPAREN . RPAREN
    (65) exit -> EXIT LPAREN . RPAREN SEMI

    RPAREN          shift and go to state 55


state 38

    (64) exit -> QUIT LPAREN . RPAREN
    (66) exit -> QUIT LPAREN . RPAREN SEMI

    RPAREN          shift and go to state 56


state 39

    (10) create -> CREATE DATABASE ID . SEMI

    SEMI            shift and go to state 57


state 40

    (16) use -> USE ID SEMI .

    $end            reduce using rule 16 (use -> USE ID SEMI .)


state 41

    (17) load -> LOAD ID AS . ID LPAREN column_dtypes RPAREN SEMI

    ID              shift and go to state 58


state 42

    (24) drop -> DROP DATABASE ID . SEMI

    SEMI            shift and go to state 59


state 43

    (25) drop -> DROP TABLE ID . SEMI

    SEMI            shift and go to state 60


state 44

    (26) select -> SELECT columns FROM . ID WHERE logical_not_expression SEMI

    ID              shift and go to state 61


state 45

    (27) columns -> columns COMMA . column
    (29) column -> . MAX LPAREN ID RPAREN
    (30) column -> . COUNT LPAREN ID RPAREN
    (31) column -> . SUM LPAREN ID RPAREN
    (32) column -> . ID
    (33) column -> . MAX LPAREN ID RPAREN AS ID
    (34) column -> . COUNT LPAREN ID RPAREN AS ID
    (35) column -> . SUM LPAREN ID RPAREN AS ID
    (36) column -> . ID AS ID

    MAX             shift and go to state 29
    COUNT           shift and go to state 30
    SUM             shift and go to state 31
    ID              shift and go to state 27

    column                         shift and go to state 62

state 46

    (36) column -> ID AS . ID

    ID              shift and go to state 63


state 47

    (29) column -> MAX LPAREN . ID RPAREN
    (33) column -> MAX LPAREN . ID RPAREN AS ID

    ID              shift and go to state 64


state 48

    (30) column -> COUNT LPAREN . ID RPAREN
    (34) column -> COUNT LPAREN . ID RPAREN AS ID

    ID              shift and go to state 65


state 49

    (31) column -> SUM LPAREN . ID RPAREN
    (35) column -> SUM LPAREN . ID RPAREN AS ID

    ID              shift and go to state 66


state 50

    (12) cdb -> CURRENT DATABASE SEMI .

    $end            reduce using rule 12 (cdb -> CURRENT DATABASE SEMI .)


state 51

    (13) schema -> SCHEMA DATABASE ID . SEMI

    SEMI            shift and go to state 67


state 52

    (14) schema -> SCHEMA CURRENT DATABASE . SEMI

    SEMI            shift and go to state 68


state 53

    (15) schema -> SCHEMA TABLE ID . SEMI

    SEMI            shift and go to state 69


state 54

    (11) dblist -> LIST DATABASE SEMI .

    $end            reduce using rule 11 (dblist -> LIST DATABASE SEMI .)


state 55

    (63) exit -> EXIT LPAREN RPAREN .
    (65) exit -> EXIT LPAREN RPAREN . SEMI

    $end            reduce using rule 63 (exit -> EXIT LPAREN RPAREN .)
    SEMI            shift and go to state 70


state 56

    (64) exit -> QUIT LPAREN RPAREN .
    (66) exit -> QUIT LPAREN RPAREN . SEMI

    $end            reduce using rule 64 (exit -> QUIT LPAREN RPAREN .)
    SEMI            shift and go to state 71


state 57

    (10) create -> CREATE DATABASE ID SEMI .

    $end            reduce using rule 10 (create -> CREATE DATABASE ID SEMI .)


state 58

    (17) load -> LOAD ID AS ID . LPAREN column_dtypes RPAREN SEMI

    LPAREN          shift and go to state 72


state 59

    (24) drop -> DROP DATABASE ID SEMI .

    $end            reduce using rule 24 (drop -> DROP DATABASE ID SEMI .)


state 60

    (25) drop -> DROP TABLE ID SEMI .

    $end            reduce using rule 25 (drop -> DROP TABLE ID SEMI .)


state 61

    (26) select -> SELECT columns FROM ID . WHERE logical_not_expression SEMI

    WHERE           shift and go to state 73


state 62

    (27) columns -> columns COMMA column .

    FROM            reduce using rule 27 (columns -> columns COMMA column .)
    COMMA           reduce using rule 27 (columns -> columns COMMA column .)


state 63

    (36) column -> ID AS ID .

    FROM            reduce using rule 36 (column -> ID AS ID .)
    COMMA           reduce using rule 36 (column -> ID AS ID .)


state 64

    (29) column -> MAX LPAREN ID . RPAREN
    (33) column -> MAX LPAREN ID . RPAREN AS ID

    RPAREN          shift and go to state 74


state 65

    (30) column -> COUNT LPAREN ID . RPAREN
    (34) column -> COUNT LPAREN ID . RPAREN AS ID

    RPAREN          shift and go to state 75


state 66

    (31) column -> SUM LPAREN ID . RPAREN
    (35) column -> SUM LPAREN ID . RPAREN AS ID

    RPAREN          shift and go to state 76


state 67

    (13) schema -> SCHEMA DATABASE ID SEMI .

    $end            reduce using rule 13 (schema -> SCHEMA DATABASE ID SEMI .)


state 68

    (14) schema -> SCHEMA CURRENT DATABASE SEMI .

    $end            reduce using rule 14 (schema -> SCHEMA CURRENT DATABASE SEMI .)


state 69

    (15) schema -> SCHEMA TABLE ID SEMI .

    $end            reduce using rule 15 (schema -> SCHEMA TABLE ID SEMI .)


state 70

    (65) exit -> EXIT LPAREN RPAREN SEMI .

    $end            reduce using rule 65 (exit -> EXIT LPAREN RPAREN SEMI .)


state 71

    (66) exit -> QUIT LPAREN RPAREN SEMI .

    $end            reduce using rule 66 (exit -> QUIT LPAREN RPAREN SEMI .)


state 72

    (17) load -> LOAD ID AS ID LPAREN . column_dtypes RPAREN SEMI
    (18) column_dtypes -> . column_dtypes COMMA column_dtype
    (19) column_dtypes -> . column_dtype
    (20) column_dtype -> . ID COLON dtype

    ID              shift and go to state 77

    column_dtypes                  shift and go to state 78
    column_dtype                   shift and go to state 79

state 73

    (26) select -> SELECT columns FROM ID WHERE . logical_not_expression SEMI
    (37) logical_not_expression -> . logical_or_expression
    (38) logical_not_expression -> . NOT logical_not_expression
    (39) logical_or_expression -> . logical_and_expression
    (40) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (41) logical_and_expression -> . equality_expression
    (42) logical_and_expression -> . logical_and_expression AND equality_expression
    (43) equality_expression -> . relational_expression
    (44) equality_expression -> . equality_expression EQ relational_expression
    (45) equality_expression -> . equality_expression EQUALS relational_expression
    (46) equality_expression -> . equality_expression NE relational_expression
    (47) relational_expression -> . additive_expression
    (48) relational_expression -> . relational_expression LT additive_expression
    (49) relational_expression -> . relational_expression GT additive_expression
    (50) relational_expression -> . relational_expression LE additive_expression
    (51) relational_expression -> . relational_expression GE additive_expression
    (52) additive_expression -> . multiplicative_expression
    (53) additive_expression -> . additive_expression PLUS multiplicative_expression
    (54) additive_expression -> . additive_expression MINUS multiplicative_expression
    (55) multiplicative_expression -> . val
    (56) multiplicative_expression -> . multiplicative_expression TIMES val
    (57) multiplicative_expression -> . multiplicative_expression DIVIDE val
    (58) multiplicative_expression -> . multiplicative_expression MOD val
    (59) val -> . ID
    (60) val -> . ICONST
    (61) val -> . FCONST
    (62) val -> . SCONST

    NOT             shift and go to state 83
    ID              shift and go to state 80
    ICONST          shift and go to state 90
    FCONST          shift and go to state 91
    SCONST          shift and go to state 92

    logical_not_expression         shift and go to state 81
    logical_or_expression          shift and go to state 82
    logical_and_expression         shift and go to state 84
    equality_expression            shift and go to state 85
    relational_expression          shift and go to state 86
    additive_expression            shift and go to state 87
    multiplicative_expression      shift and go to state 88
    val                            shift and go to state 89

state 74

    (29) column -> MAX LPAREN ID RPAREN .
    (33) column -> MAX LPAREN ID RPAREN . AS ID

    FROM            reduce using rule 29 (column -> MAX LPAREN ID RPAREN .)
    COMMA           reduce using rule 29 (column -> MAX LPAREN ID RPAREN .)
    AS              shift and go to state 93


state 75

    (30) column -> COUNT LPAREN ID RPAREN .
    (34) column -> COUNT LPAREN ID RPAREN . AS ID

    FROM            reduce using rule 30 (column -> COUNT LPAREN ID RPAREN .)
    COMMA           reduce using rule 30 (column -> COUNT LPAREN ID RPAREN .)
    AS              shift and go to state 94


state 76

    (31) column -> SUM LPAREN ID RPAREN .
    (35) column -> SUM LPAREN ID RPAREN . AS ID

    FROM            reduce using rule 31 (column -> SUM LPAREN ID RPAREN .)
    COMMA           reduce using rule 31 (column -> SUM LPAREN ID RPAREN .)
    AS              shift and go to state 95


state 77

    (20) column_dtype -> ID . COLON dtype

    COLON           shift and go to state 96


state 78

    (17) load -> LOAD ID AS ID LPAREN column_dtypes . RPAREN SEMI
    (18) column_dtypes -> column_dtypes . COMMA column_dtype

    RPAREN          shift and go to state 97
    COMMA           shift and go to state 98


state 79

    (19) column_dtypes -> column_dtype .

    RPAREN          reduce using rule 19 (column_dtypes -> column_dtype .)
    COMMA           reduce using rule 19 (column_dtypes -> column_dtype .)


state 80

    (59) val -> ID .
